--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "testNode": "node testNode"
   },
   "dependencies": {
+    "@craftzdog/react-native-buffer": "^6.0.5",
     "cheerio": "^1.0.0-rc.12",
+    "fastestsmallesttextencoderdecoder": "^1.0.22",
     "react": "18.2.0",
-    "react-native": "0.73.3"
+    "react-native": "0.73.3",
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
